# game-off-jam-game

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
src/: Main.cpp
src/Maths/: Transform.cpp  Transform.h  Vector.cpp  Vector.h
src/Object/: Object.cpp  Object.h
